--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "commonjs",
     "strict": true,
     "alwaysStrict": true,
     "strictNullChecks": true,
@@ -26,5 +26,6 @@
     "baseUrl": "src"
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx", "./script", "./test"],
+  "files": ["./hardhat.config.ts"]
 }
